# trak

./: .gitignore  README.md  build.gradle.kts  docker-compose.yaml  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/kotlin/fyi/pauli/trak/: TrakActivity.kt  TrakAndroid.kt
app/src/androidMain/kotlin/fyi/pauli/trak/onboarding/: Onboarding.kt  StepWithSuccessor.kt
app/src/androidMain/kotlin/fyi/pauli/trak/theme/: AppTheme.kt
app/src/androidMain/res/drawable/: logo_trak_together.xml  logo_trak_you.xml
app/src/androidMain/res/values/: strings.xml
app/src/androidMain/res/values-de/: strings.xml
app/src/commonMain/kotlin/fyi/pauli/trak/: Screen.kt  trak.kt
app/src/commonMain/kotlin/fyi/pauli/trak/screens/: Setup.kt
app/src/webMain/kotlin/fyi/pauli/trak/: trak.kt
assets/images/onboarding/: intro.txt  menstruation.txt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: multiplatform-project.gradle.kts  trak-app.gradle.kts  trak-server.gradle.kts
gradle/: agp.versions.toml  google.versions.toml  jetbrains.versions.toml  koin.versions.toml  ktorio.versions.toml  room.versions.toml
server/: build.gradle.kts
shared/: build.gradle.kts
trak-app/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
trak-app/src/androidMain/: AndroidManifest.xml
trak-app/src/androidMain/kotlin/fyi/pauli/trak/: TrakActivity.kt
trak-app/src/androidMain/res/drawable/: logo_trak_together.xml  logo_trak_you.xml
trak-app/src/androidMain/res/values/: strings.xml
trak-app/src/androidMain/res/values-de/: strings.xml
trak-pt3000/: Cargo.toml
trak-pt3000/.cargo/: config.toml
trak-pt3000/src/: main.rs  test_board.rs
trak-pt3000/src/driver/: hc_sr04.rs
trak-pt3000/src/modules/: hc_sr04.rs  mod.rs  mpu_6050.rs
trak-pt3000/src/register/: i2c.rs
trak-server/: .env  Cargo.toml
trak-server/.migrations/: 20260306154231_users.sql  20260306155719_auth.sql  20260315220821_access_token.sql  20260315222016_users_permissions.sql
trak-server/src/: main.rs
trak-server/src/db/: postgres.rs
trak-server/src/entities/: auth.rs  mod.rs  token.rs  user.rs
trak-server/src/errors/: database.rs  internal.rs  mod.rs  parameter.rs
trak-server/src/persistence/: postgres.rs
trak-server/src/routes/: mod.rs  specs.rs
trak-server/src/routes/v1/auth/: login.rs  mod.rs  register.rs
trak-server/src/users/: user_entity.rs
trak-server/src/util/: logging.rs
trak-specifications/: PT3000.md  openapi.yaml
(+48 files in other folders)
