[package]
edition = "2024"
name = "trak-pt3000"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "trak-pt3000"
path = "src/main.rs"
test = false

[dependencies]
defmt = "1.0.1"
smart-leds = "0.4.0"
critical-section = "1.2.0"
embedded-dht-rs = { version = "0.5.0", features = ["dht11"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
esp-backtrace = { version = "0.18.1", features = ["defmt", "esp32c3", "panic-handler", ] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", version = "0.17.0" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
