[package]
name = "trak-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
axum = "0.8.4"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
