[package]
name = "trak-server"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = "1.19.0"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.7", features = ["json"] }
axum-auth = { version = "0.8.1", features = ["auth-bearer"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls"] }
