[package]
name = "trak-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
uuid = { version = "1.22.0", features = ["v7", "fast-rng"] }
thiserror = "2.0.18"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.20"
argon2 = { version = "0.5.3", features = ["std"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
